# LKMap2025_to_IFC_cli

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  SIA405_Base_d_2025_draft.ili  SIA405_LKMAP_d_2025_draft.ili  controller.py  convertLKMap2IFC.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
GeoPandas/: __main__.py
controller/: __main__.py  cli.py
enhancer/: IntelligentDefaults.py  ZeroPointUtils.py
ifc/: IIfcElementBuilder.py  IfcCreationController.py  IfcDistributionElements.py  IfcDistributionFlowElements.py  IfcDuctElementBuilder.py  IfcElementBuilderImpls.py  IfcElementBuilders.py  IfcElements.py  IfcFileBuilder.py  IfcPipeElementBuilder.py  IfcProject.py  IfcProjectSetupBuilder.py  IfcPropertySetBuilder.py  IfcSpecialStructureElementBuilder.py  IfcUtils.py  config.py  ifc_creator.py  ifc_element_builder.py  ifc_element_proxy_builder.py  ifc_project_builder.py
ili2gpkg/: GeometryCHLV95_V2.ili  Ili2gpkgConverter.py  experimental.xtf
lkmap_to_ifc_cli/: __init__.py  __main__.py  cli.py  config.py
model/: AreaObjectReader.py  AttributeProcessor.py  CharacteristicsFilter.py  CoordinateAdapter.py  DBUtils.py  DataProcessingChain.py  FilterChain.py  GeoPackageUtils.py  GeometryFilter.py  GeometryProcessor.py  GroupingToDictionaryProcessor.py  IFilter.py  IProcessor.py  MeilenLKMAP.gpkg  PointObjectReader.py  TapPointProcessor.py  __main__.py  elements_reader.py  tapPoint.sql  tappingPoints_LKLinie.sql  tappingPoints_LKPunkt.sql  tappingPoints_lkflaeche.sql
resources/: ComponentDiagram.puml  ContainerDiagram.puml  IFC.puml  (+9 more)
(+48 files in other folders)
