[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lkmap_to_ifc_cli"
version = "0.0.1"
description = "LKMAP to IFC CLI Application"
readme = "README.md"
authors = [{ name = "Jamie Maier", email = "jamiemaier98@gmail.com" }]
requires-python = ">=3.7"

